--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,12 +14,8 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: $CONTAINER_REGISTRY_USERNAME
-        password: $CONTAINER_REGISTRY_PASSWORD
-        registry: https://index.docker.io/v1/
-    - name: Get current date # get the date of the build
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
+        username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
+        password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
     - name: Build the Docker image # push The image to the docker hub
       run: docker build . --file Dockerfile --tag bora23/test-dborovets:$(date +%s)
     - name: Docker Push
