--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,12 +11,12 @@ jobs:
   build_push:  # job name
     runs-on: ubuntu-latest  # runner name : (ubuntu latest version) 
     steps:
-      uses: actions/checkout@v3
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
         password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
+    - uses: actions/checkout@v3
     - name: Build the Docker image # push The image to the docker hub
       run: docker build . --file Dockerfile --tag bora23/test-dborovets:$(date +%s)
     - name: Docker Push
