--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,6 @@ jobs:
         password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
     - uses: actions/checkout@v3
     - name: Build the Docker image # push The image to the docker hub
-      run: docker build . --file Dockerfile --tag bora23/test-dborovets:$(date +%s)
+      run: docker build . --file Dockerfile --tag bora23/test-dborovets:123
     - name: Docker Push
-      run: docker push bora23/test-dborovets:$(date +%s)
+      run: docker push bora23/test-dborovets:123
