--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ on:
     types: completed
 
 jobs:
-  deploy:
+
+  test:  # job name
+    runs-on: ubuntu-latest  # runner name : (ubuntu latest version) 
+    steps:
     - name: Test
-      run: echo "asdasd"
+      run: echo 123
