--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,7 @@ jobs:
        git config --global user.email test@ait.com
        git clone -b master git@github.com:ait-dborovets/argo-test.git
        cd argo-test/react
-       echo $GITHUB_REF_NAME
-       echo $GITHUB_SHA
+       echo $GITHUB_REF_NAME-$GITHUB_SHA
        yq e -i '.image.tag = "'$GITHUB_REF_NAME_$GITHUB_SHA'"' dev-values.yaml
        cat dev-values.yaml
        git commit -am "update image tag" && git push origin master
