--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -2,14 +2,20 @@ name: Build Push
 
 on:
   push:
-    branches: [ "master" ]
+    branches: 
+      - dev
+      - master
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - dev
+      - master
 
 jobs:
 
   build_push:  # job name
     runs-on: ubuntu-latest  # runner name : (ubuntu latest version) 
+    env:
+      Container_Name: bora23/test-dborovets
     steps:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -18,6 +24,6 @@ jobs:
         password: ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
     - uses: actions/checkout@v3
     - name: Build the Docker image # push The image to the docker hub
-      run: docker build . --file Dockerfile --tag bora23/test-dborovets:$GITHUB_REF_NAME-$GITHUB_SHA
+      run: docker build . --file Dockerfile --tag $Container_Name:$GITHUB_REF_NAME-$GITHUB_SHA
     - name: Docker Push
-      run: docker push bora23/test-dborovets:$GITHUB_REF_NAME-$GITHUB_SHA
+      run: docker push $Container_Name:$GITHUB_REF_NAME-$GITHUB_SHA
