--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
        git config --global user.email test@ait.com
        git clone -b master git@github.com:ait-dborovets/argo-test.git
        cd argo-test/react
-       yq e -i '.image.tag = "'$GITHUB_REF_NAME-$GITHUB_SHA'"' env.Values_Name
+       yq e -i '.image.tag = "'$GITHUB_REF_NAME-$GITHUB_SHA'"' $Values_Name
        cat dev-values.yaml
        git commit -am "update image tag" && git push origin master
        
