--- a/.github/workflows/deploy-helm.yml
+++ b/.github/workflows/deploy-helm.yml
@@ -25,4 +25,4 @@ jobs:
       run: |
        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && mv kubectl /usr/local/bin/
        chmod a+x /usr/local/bin/kubectl
-       kubectl -v
+       kubectl --help
