--- a/.github/workflows/deploy-helm.yml
+++ b/.github/workflows/deploy-helm.yml
@@ -25,4 +25,10 @@ jobs:
       run: |
        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && mv kubectl /usr/local/bin/
        chmod a+x /usr/local/bin/kubectl
+       curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+       chmod 700 get_helm.sh
+       ./get_helm.sh
+       apt-get install awscli
        kubectl --help
+       aws --help
+       helm --help
