--- a/.github/workflows/deploy-helm.yml
+++ b/.github/workflows/deploy-helm.yml
@@ -23,8 +23,8 @@ jobs:
         echo "Values_Name=prod-values.yaml" >> $GITHUB_ENV
     - name: Install kubectl
       run: |
-       curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && mv kubectl /usr/local/bin/
-       chmod a+x /usr/local/bin/kubectl
+       #curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && mv kubectl /usr/local/bin/
+       #chmod a+x /usr/local/bin/kubectl
        kubectl --help
        aws --help
        helm --help
