--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -1,5 +1,8 @@
 name: React_S3_Cloudfront
 
+env:
+  AWS_REGION: 'eu-central-1'  # Default AWS Region is eu-central-1
+
 on:
   push:
     branches:
@@ -11,7 +14,6 @@ on:
       - master
 
 jobs:
-
   Build_App:
     runs-on: ubuntu-latest
     env : 
@@ -36,18 +38,13 @@ jobs:
     if: "!contains(github.ref, 'pull')"
     runs-on: ubuntu-latest
     needs  : [Build_App]
-    permissions:
-      id-token: write
-      contents: read
-    env:
-      AWS_REGION: 'eu-central-1'  # Default AWS Region is eu-central-1
     
     steps:
-      - name: Set env vars (dev)
+      - name: Set env vars (dev) # Set S3 bucket name for the DEV env
         if: endsWith(github.ref, '/dev')
-        run: |
-          echo "S3_BUCKET=test-react-ait" >> $GITHUB_ENV
-      - name: Set env vars (prod)
+        run: | 
+          echo "S3_BUCKET=test-react-ait" >> $GITHUB_ENV 
+      - name: Set env vars (prod) # Set S3 bucket name for the PROD env
         if: endsWith(github.ref, '/master')
         run: |
           echo "S3_BUCKET=test-react-ait-prod" >> $GITHUB_ENV
@@ -92,18 +89,13 @@ jobs:
     if: "!contains(github.ref, 'pull')"
     runs-on: ubuntu-latest
     needs: [S3_Bucket_push]
-    permissions:
-      id-token: write
-      contents: read
-    env:
-      AWS_REGION: 'eu-central-1' # Default AWS Region is eu-central-1
 
     steps:
-      - name: Set env vars (dev)
+      - name: Set env vars (dev) # Set CF distribution name for the DEV env
         if: endsWith(github.ref, '/dev')
         run: |
           echo "CF_DISTR=EAK071V1Y83IX" >> $GITHUB_ENV
-      - name: Set env vars (prod)
+      - name: Set env vars (prod) # Set CF distribution name for the PROD env
         if: endsWith(github.ref, '/master')
         run: |
           echo "CF_DISTR=E35X06I21HGQHZ" >> $GITHUB_ENV
